# madstamp-automation

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/apis/: ocr_space_client.py  openrouter_client.py
app/core/: config.py
app/jobs/: email_handler.py  file_manager.py  illustrator_automator.py  image_processor.py  lovart_automator.py  photoshop_converter.py  vector_converter.py  version_manager.py
app/services/: image_analyzer_service.py
chrome-extension/: manifest.json
chrome-extension/_locales/ko/: messages.json
chrome-extension/docs/: CHROME_WEBSTORE_DEPLOYMENT.md
chrome-extension/src/background/: service-worker.js
chrome-extension/src/content-scripts/: gmail-integration.js  gmail-styles.css  lovart-automator.js  lovart-styles.css
chrome-extension/src/popup/: popup.css  popup.html  popup.js
db/: schema.sql
docs/: POD_FINAL.md  POD_FINAL_V3.md  STAMP_SUITABILITY_ANALYSIS.md  SYSTEM_ARCHITECTURE.md  SYSTEM_ARCHITECTURE_V3.md
font-generator/: README.md
font-generator/colab/: MXFont_Korean_Font_Generator.ipynb
font-generator/docs/: ai_font_services.md  font_sample_characters.md
font-generator/samples/: char_sets.json
font-generator/templates/: generate_template.py
scripts/: generate_stamp_icon.py
stamp-generator/circle/: stamp_generator.py
stamp-generator/square/: stamp_square.py
